[package]
name = "teletext"
version = "0.1.3"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]

[dependencies]
derive-error-chain = "=0.11.0"
dotenv = "0.12"
futures-await = "0.1"
futures-retry = "0.1"
proc-macro2 = "=0.4.6"
regex = "1.0"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "a2db63764dc7bb590104c0ea7b38f0b6191c7d0a", features = ["curl_connector"] }
tokio-core = "0.1"
